@@ -23,6 +23,7 @@ REDHAT_BUGZILLA=1002279,1093336
   + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
   + ManageFile: New function: MANAGE_FILE_CACHE
   + ManageFile: New function: MANAGE_FILE_EXPIRY
+  + ManageGConf: New macro: MANAGE_GCONF_SCHEMAS
   + ManageMessage: New function: M_OUT
   + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
   + ManageString: New function: STRING_ESCAPE_BACKSLASH
@@ -48,3 +49,4 @@ REDHAT_BUGZILLA=1002279,1093336
   + ManageDependency: Macro to function: MANAGE_DEPENDENCY
   + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
     to docdir/<PRJ_NAME>
+
